--- a/Back-end/config.env
+++ b/Back-end/config.env
@@ -1,1 +1,2 @@
-DATABASE=mongodb+srv://bcordero869:ComunicacionEmocional@cluster0.igrndt0.mongodb.net/ComunicacionEmocional?retryWrites=true&w=majority
+DATABASE=mongodb+srv://bcordero869:ComunicacionEmocional@cluster0.igrndt0.mongodb.net/?retryWrites=true&w=majority
+DATABASE_PASSWORD=ComunicacionEmocional
